tests/parser/fail/field-name-collision.som
"test:
failMessage:
  - contains: foo
  - contains: defined twice
"

FieldNameCollision = (
  |a foo b c foo d|
)
